<resources>
    <string name="app_name">HomeWork2</string>
    <string name="poi">POI</string>
    <string name="attractions">Attractions</string>
    <string name="dining">Dining</string>
    <string name="education">Education</string>
    <string name="family">Family</string>
    <string name="health">Health</string>
    <string name="office">Office</string>
    <string name="promotions">Promotions</string>
    <string name="radio">Radio</string>
    <string name="recipes">Recipes</string>
    <string name="sports">Sports</string>
    <string name="photo">PHOTO</string>
    <string name="title">Title</string>
    <string name="prise">Prise</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="inventory">Inventory</string>
    <string name="weight">Weight</string>
    <string name="email">Email</string>
    <string name="sing_in">Sing in</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember">Remember</string>
    <string name="just_sing_in">* Just sing in</string>
    <string name="android">Android</string>
    <string name="_125_n_posts">125 \n Posts</string>
    <string name="_20k_n_followers">20K \n Followers</string>
    <string name="_22_n_following">22 \n Following</string>
    <string name="directions">directions</string>
    <string name="address">Address</string>
    <string name="username">Username</string>
    <string name="website">website</string>
    <string name="save">save</string>
    <string name="android_course">Android course</string>
    <string name="layouts">Layouts</string>
    <string name="views">Views</string>
</resources>
