<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/headFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/head"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:gravity="center_vertical|center_horizontal"
            android:paddingTop="70dp"
            android:paddingBottom="70dp"
            android:text="@string/photo"
            android:textColor="@color/black"
            android:textSize="70sp" />

        <ImageButton
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@id/head"
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/gray"
            android:src="@drawable/ic_photo_camera_white_32dp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/title"
        android:layout_below="@+id/headFrame" />

    <LinearLayout
        android:id="@+id/linearPriseLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/title">

        <EditText

            android:id="@+id/prise"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:hint="@string/prise" />

        <EditText
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="2"
            android:drawableEnd="@drawable/ic_location_on_black_24dp"
            android:hint="@string/location" />
    </LinearLayout>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/description"
        android:layout_below="@id/linearPriseLocation" />

    <FrameLayout
        android:id="@+id/frameInventoryWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/description">

        <EditText

            android:id="@+id/inventory"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/inventory" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/weight" />
    </FrameLayout>
</RelativeLayout>