<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:gravity="center_vertical|center_horizontal"
            android:paddingTop="70dp"
            android:paddingBottom="70dp"
            android:text="@string/photo"
            android:textColor="@color/black"
            android:textSize="70sp"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/gray"
            android:src="@drawable/ic_photo_camera_white_32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/title"
        app:layout_constraintTop_toBottomOf="@+id/headFrame" />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:id="@+id/linearPriseLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/title">

        <EditText

            android:id="@+id/prise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="2"
            android:hint="@string/prise" />

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_location_on_black_24dp"
            android:hint="@string/location" />
    </LinearLayout>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/description"
        app:layout_constraintTop_toBottomOf="@id/linearPriseLocation" />

    <FrameLayout
        android:layout_marginTop="30dp"
        android:id="@+id/frameInventoryWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/description">

        <EditText

            android:id="@+id/inventory"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/inventory" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/weight" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>