<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/singInTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="50dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:text="@string/sing_in"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="34dp"
        android:background="@drawable/round"

        android:hint="@string/email"
        android:paddingStart="34dp"
        android:paddingTop="20dp"
        android:paddingEnd="34dp"
        android:paddingBottom="20dp"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/singInTextView" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round"
        android:hint="@string/password"
        android:paddingStart="34dp"
        android:paddingTop="20dp"
        android:paddingEnd="34dp"
        android:paddingBottom="20dp"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/emailEditText" />

    <LinearLayout
        android:id="@+id/layoutRememberForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText">

        <CheckBox
            android:id="@+id/checkBoxRemember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/remember"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSingIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/round_black"
        android:paddingStart="34dp"
        android:paddingTop="20dp"
        android:paddingEnd="34dp"
        android:paddingBottom="20dp"
        android:text="@string/sing_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/layoutRememberForgot" />

    <TextView
        android:id="@+id/textViewJustSingIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/just_sing_in"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>